--- a/prakash.css
+++ b/prakash.css
@@ -49,10 +49,19 @@
     
     box-shadow: 0px 0px 5px 3px white;
 }
+.logo img{
+    width: 35%;
+    border-radius: 10px;
+    background-color: black;
+}
 
+.logo img:hover{
+    box-shadow: 0px 0px 5px 8px white;
+}
 .logo{
     display: flex;
     margin-left: 20px;
+    color: aqua;
     background-color: aqua;
 }
 .logo h1{
@@ -60,6 +69,8 @@
     border-radius: 10px;
     padding: 1px 10px;
 }
+
+
 .logo h1:hover{
     box-shadow: 0px 0px 5px 5px white
 }
